--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Studio</title>
   </head>
   <body>
     <header>
       <nav>
-        <a href="/">WebStudio</a>
+        <a href="./index.html">WebStudio</a>
 
         <ul>
           <li><a href="">Studio</a></li>
@@ -17,26 +17,28 @@
           <li><a href="">Contacts</a></li>
         </ul>
       </nav>
-      <ul>
+
+      <address>
+        <ul>
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-      </ul>
+        <li><a href="tel:+110001111111">+11 (000) 111-11-11</a> </li> 
+        </ul>
+      </address>
     </header>
 
     <main>
       <!-- BlockHero -->
-      <div>
         <section>
           <h1>Effective Solutions for Your Business</h1>
           <button type="button">Order Service</button>
         </section>
-      </div>
 
       <!-- Our advantages -->
       <section>
+      <h2>Our advantages</h2>
         <ul>
           <li>
-            <h2>Strategy</h2>
+            <h3>Strategy</h3>
             <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
@@ -44,15 +46,15 @@
           </li>
 
           <li>
-            <h2>Punctuality</h2>
+            <h3>Punctuality</h3>
             <p>
               Bring the key message to the brand's audience for the best price
-              within the shortest possible time
+              within the shortest possible time.
             </p>
           </li>
 
           <li>
-            <h2>Diligence</h2>
+            <h3>Diligence</h3>
             <p>
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
@@ -60,7 +62,7 @@
           </li>
 
           <li>
-            <h2>Technologies</h2>
+            <h3>Technologies</h3>
             <p>
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -121,7 +123,7 @@
 
     <!-- Footer -->
     <footer>
-      <a href="/">WebStudio</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
